--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <h4>contact</h4>
       </div>
     </div>
-    <div id="info">
+    <div id="div">
+      <div id="info">
         <img
           class="pimage"
           src="Assets/IMG/profile.jpg"
@@ -65,6 +66,22 @@
         </ul>
       </div>
     </div>
+    <div id="main">
+      <div class="carousel-item active">
+        <img class="carousel-img" src="img/carousel-1.jpg" alt="Carousel Image">
+        <div class="carousel-caption">
+            <h2>Lorem ipsum dolor sit amet</h2>
+            <div class="carousel-meta">
+                <small><i class="fa fa-calendar-alt"></i> 01-Jan-2045</small>
+                <small><i class="fa fa-folder"></i> Web Design</small>
+                <small><i class="fa fa-comments"></i> 15 Comments</small>
+            </div>
+            <a href="#" class="btn btn-outline-light">Read More</a>
+        </div>
+    </div>
+    </div>
+    </div>
+
     <!-- Breaker -->
     <div id="curve">
       <svg>
